# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.465 2005/12/19 15:28:42 wolf31o2 Exp $

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage2/stage2-chroot.sh, targets/stage2/stage2-controller.sh,
  targets/stage2/stage2-preclean-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage3/stage3-controller.sh,
  targets/stage3/stage3-preclean-chroot.sh:
  Fixed up spacing/coding style on stages 2 and 3

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/stage1/stage1-controller.sh,
  targets/stage1/stage1-preclean-chroot.sh:
  Fixed up spacing/coding style on stage1. Also changed
  gcc-config/binutils-config to be outside the chroot.

  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/netboot/netboot-chroot.sh, targets/netboot/netboot-combine.sh,
  targets/netboot/netboot-controller.sh, targets/netboot/netboot-image.sh:
  Fixed up spacing/coding style on netboot.

  16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Fixed up spacing/coding style on livecd-stage*.

  16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-chroot.sh, targets/grp/grp-controller.sh,
  targets/grp/grp-preclean-chroot.sh:
  Fixed up spacing/coding style on grp.

  16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh,
  targets/embedded/embedded-controller.sh,
  targets/embedded/embedded-fs-runscript.sh,
  targets/embedded/embedded-preclean-chroot.sh:
  Fixed up spacing/coding style on embedded.

  16 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py,
  targets/support/bootloader-setup.sh, targets/support/chroot-functions.sh,
  targets/support/create-iso.sh, targets/support/filesystem-functions.sh,