@@ -1,6 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage4/Attic/stage4-preclean-chroot.sh,v 1.3 2005/12/19 15:36:02 wolf31o2 Exp $
 
 . /tmp/chroot-functions.sh
 #update_env_settings
