@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.465 2005/12/19 15:28:42 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.466 2005/12/19 15:36:02 wolf31o2 Exp $
+
+  19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/stage4/stage4-chroot.sh, targets/stage4/stage4-controller.sh,
+  targets/stage4/stage4-preclean-chroot.sh:
+  Fixed up spacing/coding style on stage4.
 
   19 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/stage2/stage2-chroot.sh, targets/stage2/stage2-controller.sh,
